--- a/config.env
+++ b/config.env
@@ -1,15 +1,15 @@
-BOT_TOKEN = ""
+BOT_TOKEN = "6153026190:AAG58BgL3dXzc2NLlw7NmrrDudSMSER-nc0"
 GDRIVE_FOLDER_ID = ""
-OWNER_ID = 
+OWNER_ID = 5179011789
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
 AUTO_DELETE_MESSAGE_DURATION = 20
-TELEGRAM_API = 
-TELEGRAM_HASH = ""
+TELEGRAM_API = 25918874
+TELEGRAM_HASH = "87c7c525932cf3d753bea33786ad71ee"
 # OPTIONAL CONFIG
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = -1
 IS_TEAM_DRIVE = ""
-DATABASE_URL = ""
+DATABASE_URL = "postgres://zluvsilj:U1I3JV3hyEYeIqHGV5PX7TmHpUGMJ2A1@mahmud.db.elephantsql.com/zluvsilj"
 AUTHORIZED_CHATS = ""
 SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = "true"
@@ -19,8 +19,8 @@ STATUS_LIMIT = ""
 STOP_DUPLICATE = "true"
 CMD_INDEX = ""
 UPTOBOX_TOKEN = ""
-TORRENT_TIMEOUT = "150"
-EXTENSION_FILTER = ".txt .html .json .index .jpg"
+TORRENT_TIMEOUT = ""
+EXTENSION_FILTER = ""
 INCOMPLETE_TASK_NOTIFIER = "true"
 # Mirror
 MIRROR_LOGS = ""
