--- a/config.env
+++ b/config.env
@@ -23,11 +23,11 @@ TORRENT_TIMEOUT = ""
 EXTENSION_FILTER = ""
 INCOMPLETE_TASK_NOTIFIER = "true"
 # Mirror
-MIRROR_LOGS = ""
+MIRROR_LOGS = "-1001886316109"
 BOT_PM = "true"
-FORCE_BOT_PM = ""
+FORCE_BOT_PM = "True"
 # Leech
-LEECH_LOG = ""
+LEECH_LOG = "-1001886316109"
 USER_SESSION_STRING = ""
 LEECH_SPLIT_SIZE = ""
 AS_DOCUMENT = ""
@@ -37,7 +37,7 @@ CUSTOM_FILENAME = ""
 UPSTREAM_REPO = ""
 UPSTREAM_BRANCH = ""
 # qBittorrent/Aria2c
-BASE_URL_OF_BOT = ""
+BASE_URL_OF_BOT = "https://woodcraftheliosheroku.herokuapp.com/"
 SERVER_PORT = ""
 WEB_PINCODE = ""
 # RSS
@@ -73,7 +73,7 @@ TITLE_NAME = "Farooq"
 AUTHOR_NAME = "Farooq Sheikh"
 AUTHOR_URL = "https://t.me/Farooq_is_KING"
 # Buttons
-VIEW_LINK = "true"
+VIEW_LINK = ""
 SOURCE_LINK = "true"
 START_BTN1_NAME = "💎Farooq❤️"
 START_BTN1_URL = "https://t.me/Farooq_is_KING"
